web make getBaseUrl() smart